--- a/src/pages/FundamentSVG.astro
+++ b/src/pages/FundamentSVG.astro
@@ -57,7 +57,84 @@ import AnimatedLogoButton from "../components/AnimatedLogoButton.jsx";
         </dd>
     </dl>
 
-    <AnimatedLogoButton client:visible/>
+    <AnimatedLogoButton client:visible />
 
     https://www.joshwcomeau.com/svg/friendly-introduction-to-svg/
+
+    <svg width="100" height="100">
+        <circle r="30" cx="50" cy="50"></circle>
+        <rect x="5" y="10" width="30" height="30"></rect>
+    </svg>
+    <div style="background: black; width: 280px; height: 280px;">
+        <svg width="280" height="280">
+            <line
+                x1="80"
+                y1="80"
+                x2="200"
+                y2="200"
+                stroke="oklch(0.9 0.3 164)"
+                stroke-width="5"></line>
+            <g transform="translate(150, 150) rotate(45)">
+                <rect
+                    x="-40"
+                    y="-40"
+                    width="80"
+                    height="80"
+                    fill="none"
+                    stroke="oklch(0.9 0.3 344)"
+                    stroke-width="5"
+                    stroke-dasharray="10 10"
+                    stroke-dashoffset="0"></rect>
+                <circle
+                    cx="-110"
+                    cy="0"
+                    r="5"
+                    fill="oklch( 1 1 1)"
+                    stroke-width="5"></circle>
+                <circle
+                    cx="80"
+                    cy="0"
+                    r="5"
+                    fill="oklch( 1 1 1)"
+                    stroke-width="5"></circle>
+            </g>
+        </svg>
+        <svg
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 178 153"
+            width="178"
+            height="153"
+            ><!-- svg-source:excalidraw -->
+            <metadata></metadata>
+            <defs>
+                <style class="style-fonts"></style>
+            </defs>
+            <rect x="0" y="0" width="178" height="153" fill="#ffffff"></rect>
+            <g
+                stroke-linecap="round"
+                transform="translate(10 10) rotate(0 79 66.5)"
+            >
+                <path
+                    d="M100 16.75 C112.71 26.66, 123.35 35.96, 138 50.25 M100 16.75 C110.86 26.41, 122.57 36.75, 138 50.25 M138 50.25 C156.67 67.33, 156.07 65.67, 138 83.75 M138 50.25 C160 66.11, 155.75 65.19, 138 83.75 M138 83.75 C125.2 94.01, 111.99 104.31, 100 116.25 M138 83.75 C125.6 94.46, 112.09 105.67, 100 116.25 M100 116.25 C79.36 131.54, 81.33 134.52, 60 116.25 M100 116.25 C79.97 131.26, 78.74 134.08, 60 116.25 M60 116.25 C51.33 107.82, 38.45 99.91, 20 83.75 M60 116.25 C49.15 107.59, 39.45 100.43, 20 83.75 M20 83.75 C0.78 65.67, 1.77 67.97, 20 50.25 M20 83.75 C0.12 67.26, -1.46 68.01, 20 50.25 M20 50.25 C31 40.88, 37.79 34.82, 60 16.75 M20 50.25 C29.5 41.81, 38.34 33.2, 60 16.75 M60 16.75 C78.08 -0.82, 80.14 1.73, 100 16.75 M60 16.75 C82.07 0.01, 81.75 1.48, 100 16.75"
+                    stroke="#1e1e1e"
+                    stroke-width="2"
+                    fill="none"
+                >
+                </path>
+            </g>
+            <g
+                stroke-linecap="round"
+                transform="translate(55 50) rotate(0 32 29.5)"
+            >
+                <path
+                    d="M41.13 1.85 C47.7 3.29, 55.47 7.66, 59.38 12.99 C63.3 18.32, 65.57 27.45, 64.61 33.84 C63.66 40.24, 58.97 47.11, 53.66 51.37 C48.35 55.63, 39.73 59.13, 32.75 59.41 C25.78 59.7, 17.16 56.84, 11.8 53.07 C6.44 49.31, 2.11 43.07, 0.59 36.83 C-0.92 30.59, -0.44 21.5, 2.74 15.63 C5.92 9.77, 12.98 3.82, 19.69 1.65 C26.4 -0.52, 39.04 2.46, 43.03 2.62 C47.01 2.78, 43.95 2.4, 43.6 2.62 M18.53 4.68 C24.23 1.75, 32.31 0.69, 38.94 1.84 C45.58 3, 54.26 6.58, 58.36 11.62 C62.46 16.67, 64.04 25.9, 63.55 32.13 C63.06 38.36, 59.99 44.61, 55.43 49 C50.88 53.38, 43.09 57.57, 36.21 58.41 C29.32 59.26, 20.18 57.3, 14.14 54.08 C8.1 50.85, 1.84 44.79, -0.02 39.06 C-1.88 33.33, 0.2 25.71, 2.95 19.69 C5.7 13.66, 13.87 5.38, 16.48 2.9 C19.1 0.43, 18.48 4.31, 18.64 4.82"
+                    stroke="#1e1e1e"
+                    stroke-width="2"
+                    fill="none"
+                >
+                </path>
+            </g>
+        </svg>
+    </div>
 </BaseLayout>
