Animated svg+react

--- a/src/pages/FundamentSVG.astro
+++ b/src/pages/FundamentSVG.astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import AnimatedLogoButton from "../components/AnimatedLogoButton.jsx";
+import AnimatedReloj from "../components/AnimatedReloj";
 ---
 
 <BaseLayout>
@@ -137,4 +138,5 @@ import AnimatedLogoButton from "../components/AnimatedLogoButton.jsx";
             </g>
         </svg>
     </div>
+    <AnimatedReloj client:visible />
 </BaseLayout>
